--- a/money.web/Views/Home/AddEntry.cshtml
+++ b/money.web/Views/Home/AddEntry.cshtml
@@ -21,27 +21,23 @@
             </div>
         </div>
         <div class="form-group">
+            @Html.LabelFor(x => x.Amount) / @Html.LabelFor(x => x.Type)
+            <div class="row">
+                <div class="col-xs-4">
+                    @Html.TextBoxFor(x => x.Amount, new { @class = "form-control", type = "number", step = "0.01", autocomplete = "off" })
+                </div>
+                <div class="col-xs-8">
+                    @Html.DropDownListFor(x => x.Type, Model.Types, new { @class = "form-control" })
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
             @Html.LabelFor(x => x.CategoryID)
             @Html.DropDownListFor(x => x.CategoryID, Model.Categories, "--", new { @class = "form-control" })
         </div>
         <div class="form-group">
             @Html.LabelFor(x => x.PartyID)
             @Html.DropDownListFor(x => x.PartyID, Model.Parties, "--", new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(x => x.Type) / @Html.LabelFor(x => x.Amount)
-            <div class="row">
-                <div class="col-xs-5">
-                    @Html.EnumDropDownListFor(x => x.Type, new { @class = "form-control" })
-                </div>
-                <div class="col-xs-7">
-                    @Html.TextBoxFor(x => x.Amount, new { @class = "form-control", type = "number", step = "0.01", autocomplete = "off" })
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(x => x.TransferAccountID)
-            @Html.DropDownListFor(x => x.TransferAccountID, Model.Accounts, "--", new { @class = "form-control" })<br />
         </div>
     </div>
 </div>
