--- a/money.web/Views/Home/_Account.cshtml
+++ b/money.web/Views/Home/_Account.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AccountViewModel
 
-@{ 
+@{
     Layout = null;
 }
 
@@ -8,29 +8,40 @@
     <div class="col-xs-6">
         <h1>@Html.ActionLink(Model.Name, "Index", "Entries", new { id = Model.ID }, new { @class = "btn-height" })</h1>
     </div>
-    <div class="col-xs-6 text-right">
+    <div class="col-xs-4 text-right">
         <span class="btn-height account-balance">@Model.CurrentBalance.ToString("0.00")</span>
-        <button data-accountid="@Model.ID" data-accountname="@Model.Name" class="btn btn-primary btn-add-entry"><i class="fa fa-plus"></i> Add</button>
+    </div>
+    <div class="col-xs-2 text-right">
+        <button data-accountid="@Model.ID" data-accountname="@Model.Name" class="btn btn-primary btn-add-entry"><i class="fa fa-plus"></i></button>
     </div>
 </div>
 
 @if (Model.Categories.Count() > 0)
 {
-    <div class="row row-budget">
-        <div class="col-xs-12">
-            @foreach (var category in Model.Categories)
-            {
-                <div>
-                    <span class="category-name">@category.Name</span>
-                    <span class="category-spent">Spent @Math.Abs(category.Spent).ToString("0.00") of @Math.Abs(category.Amount).ToString("0.00")</span>
-                    <span class="category-remaining pull-right">@Math.Abs(category.Remaining).ToString("0.00") @(category.Remaining <= 0 ? "left" : "over")</span>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-@(category.Remaining <= 0 ? "success" : "danger")" role="progressbar" aria-valuenow="@category.PercentageSpent" aria-valuemin="0" aria-valuemax="100" style="width: @(category.PercentageSpent > 100 ? 100 : category.PercentageSpent)%">
-                        <span class="sr-only">@category.PercentageSpent%</span>
+
+    foreach (var category in Model.Categories)
+    {
+        <div class="row row-budget">
+            <div class="col-xs-10">
+                <div class="row">
+                    <div class="col-xs-12 category-name">@category.Name</div>
+                    <div class="col-xs-12">
+                        <div class="progress">
+                            <span class="category-spent">@Math.Abs(category.Spent).ToString("0.00") of @Math.Abs(category.Amount).ToString("0.00")</span>
+                            <span class="category-remaining">
+                                @Math.Abs(category.Remaining).ToString("0.00") @(category.Remaining <= 0 ? "left" : "over")
+                            </span>
+                            <div class="progress-bar progress-bar-@(category.Remaining <= 0 ? "success" : "danger")" role="progressbar" aria-valuenow="@category.PercentageSpent" aria-valuemin="0" aria-valuemax="100" style="width: @(category.PercentageSpent > 100 ? 100 : category.PercentageSpent)%">
+                                <span class="sr-only">@category.PercentageSpent%</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            }
+            </div>
+            <div class="col-xs-2">
+                <button data-accountid="@Model.ID" data-accountname="@Model.Name" data-categoryid="@category.ID" data-categoryname="@category.Name" class="btn btn-primary btn-block btn-add-entry"><i class="fa fa-plus"></i></button>
+            </div>
         </div>
-    </div>
+    }
+
 }
