--- a/money.web/Views/Home/_Account.cshtml
+++ b/money.web/Views/Home/_Account.cshtml
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="col-xs-2">
-                <button data-accountid="@Model.ID" data-accountname="@Model.Name" data-categoryid="@category.ID" data-categoryname="@category.Name" class="btn btn-primary btn-block btn-add-entry"><i class="fa fa-plus"></i></button>
+                <button data-accountid="@Model.ID" data-accountname="@Model.Name" data-categoryid="@category.ID" data-categoryname="@category.Name" data-remaining="@category.Remaining" class="btn btn-primary btn-block btn-add-entry"><i class="fa fa-plus"></i></button>
             </div>
         </div>
     }
