--- a/money.web/Views/Shared/_Layout.cshtml
+++ b/money.web/Views/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
     @Scripts.Render("~/bundles/site")
     <script>
         const _ADD_ENTRY_URL = '@Url.Action("AddEntry", "Home")';
+        const _NET_WORTH_URL = '@Url.Action("NetWorth", "Home")';
     </script>
     @RenderSection("scripts", required: false)
 </body>
