--- a/money.web/Views/Home/_Account.cshtml
+++ b/money.web/Views/Home/_Account.cshtml
@@ -37,8 +37,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-2">
-                <button data-accountid="@Model.ID" data-accountname="@Model.Name" data-categoryid="@category.ID" data-categoryname="@category.Name" data-remaining="@category.Remaining" class="btn btn-primary btn-block btn-add-entry"><i class="fa fa-plus"></i></button>
+            <div class="col-xs-2 text-right">
+                <button data-accountid="@Model.ID" data-accountname="@Model.Name" data-categoryid="@category.ID" data-categoryname="@category.Name" data-remaining="@category.Remaining" class="btn btn-primary btn-add-entry"><i class="fa fa-plus"></i></button>
             </div>
         </div>
     }
