Limit width of container at desktop widths, closes #27

--- a/money.web/Content/site.css
+++ b/money.web/Content/site.css
@@ -144,3 +144,9 @@ body {
 .net-worth-balance-list-hidden {
     display: none;
 }
+
+@media (min-width: 600px) {
+    .container {
+        width: 600px;
+    }
+}
