--- a/money.web/Content/site.scss
+++ b/money.web/Content/site.scss
@@ -23,6 +23,7 @@
 
 .row-budget {
     margin-top: 5px;
+
     .btn-add-entry {
         margin-top: 4px;
     }
@@ -140,4 +141,10 @@
 
 .net-worth-balance-list-hidden {
     display: none;
+}
+
+@media (min-width: 600px) {
+    .container {
+        width: 600px;
+    }
 }
