--- a/money.web/Views/Shared/_Layout.cshtml
+++ b/money.web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Money</title>
+    <title>@ViewBag.Title</title>
     <link rel="shortcut icon" href="~/Content/favicon.ico" />
     @Styles.Render("~/Content/css")
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
