--- a/money.web/Content/site.scss
+++ b/money.web/Content/site.scss
@@ -23,10 +23,6 @@
 
 .row-budget {
     margin-top: 5px;
-
-    .btn-add-entry {
-        margin-top: 4px;
-    }
 }
 
 .account-balance {
@@ -36,6 +32,25 @@
 .progress {
     position: relative;
     margin-bottom: 0;
+    height: 34px;
+
+    span {
+        line-height: 34px;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+}
+
+.category-name {
+    font-weight: bold;
+}
+
+.category-remaining {
+    font-weight: bold;
+    left: auto;
+    right: 0;
+    text-align: right;
 }
 
 .updated {
@@ -48,28 +63,6 @@
 .updated-show {
     transition: opacity 0s cubic-bezier(0.910, 0.065, 0.950, 0.540);
     opacity: 1;
-}
-
-.category-name {
-    font-weight: bold;
-    font-size: 12px;
-}
-
-.category-spent {
-    position: absolute;
-    top: 0;
-    left: 5px;
-    font-size: 12px;
-    line-height: 20px;
-}
-
-.category-remaining {
-    font-weight: bold;
-    position: absolute;
-    top: 0;
-    right: 5px;
-    font-size: 12px;
-    line-height: 20px;
 }
 
 .btn-height {
