--- a/money.web/Views/MonthlyBudgets/Index.cshtml
+++ b/money.web/Views/MonthlyBudgets/Index.cshtml
@@ -7,14 +7,27 @@
 <div class="row">
     <div class="col-md-12">
         <h1>Monthly Budgets</h1>
-        @foreach(var monthlyBudget in Model.MonthlyBudgets)
-        {
-        <p>
-            @monthlyBudget.StartDate - @monthlyBudget.EndDate 
-            @Html.ActionLink("Edit", "Update", new { id = monthlyBudget.ID })
-            @Html.ActionLink("Copy", "Copy", new { id = monthlyBudget.ID })
-        </p>
-        }
-        @Html.ActionLink("New", "Create", new { id = Model.AccountID })
+        <table class="table table-condensed table-striped">
+            <thead>
+                <tr>
+                    <th>Start</th>
+                    <th>End</th>
+                    <th class="text-center">Edit</th>
+                    <th class="text-center">Copy</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var monthlyBudget in Model.MonthlyBudgets)
+                {
+                    <tr>
+                        <td>@monthlyBudget.StartDate</td>
+                        <td>@monthlyBudget.EndDate</td>
+                        <td class="text-center">@Html.ActionLink("Edit", "Update", new { id = monthlyBudget.ID })</td>
+                        <td class="text-center">@Html.ActionLink("Copy", "Copy", new { id = monthlyBudget.ID })</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <p>@Html.ActionLink("New", "Create", new { id = Model.AccountID })</p>
     </div>
 </div>
