--- a/money.web/Views/Users/Login.cshtml
+++ b/money.web/Views/Users/Login.cshtml
@@ -9,9 +9,16 @@
         <h1>Log In</h1>
         @using (Html.BeginForm())
         {
-            @Html.EditorForModel()
+            <div class="form-group">
+                @Html.LabelFor(x => x.Email)
+                @Html.TextBoxFor(x => x.Email, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x => x.Password)
+                @Html.PasswordFor(x => x.Password, new { @class = "form-control" })
+            </div>
 
-            <input type="submit" value="Log In" />
+            <button type="submit" class="btn btn-primary">Log In</button>
         }
     </div>
 </div>
