--- a/money.web/Views/MonthlyBudgets/Create.cshtml
+++ b/money.web/Views/MonthlyBudgets/Create.cshtml
@@ -9,9 +9,21 @@
         <h1>Create Monthly Budget</h1>
         @using (Html.BeginForm("Create", "MonthlyBudgets"))
         {
-            @Html.EditorForModel()
-            @Html.EditorFor(x => x.Categories)
-            <input type="submit" value="Create" />
+            <div class="form-group">
+                @Html.LabelFor(x => x.StartDate)
+                @Html.EditorFor(x => x.StartDate)
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(x => x.EndDate)
+                @Html.EditorFor(x => x.EndDate)
+            </div>
+
+            <div class="form-horizontal">
+                @Html.EditorFor(x => x.Categories)
+            </div>
+
+            <button type="submit" class="btn btn-primary">Create</button>
         }
     </div>
 </div>
