--- a/money.web/Views/MonthlyBudgets/Update.cshtml
+++ b/money.web/Views/MonthlyBudgets/Update.cshtml
@@ -9,15 +9,25 @@
         <h1>Update Monthly Budget</h1>
         @using (Html.BeginForm())
         {
-            @Html.EditorForModel()
+            <div class="form-group">
+                @Html.LabelFor(x => x.StartDate)
+                @Html.EditorFor(x => x.StartDate)
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(x => x.EndDate)
+                @Html.EditorFor(x => x.EndDate)
+            </div>
+
             @Html.EditorFor(x => x.Categories)
-            <input type="submit" value="Update" />
+
+            <button type="submit" class="btn btn-primary">Update</button>
         }
 
         @using (Html.BeginForm("Delete", "MonthlyBudgets"))
         {
             @Html.HiddenFor(x => x.ID)
-            <input type="submit" value="Delete" />
+            <button type="submit" class="btn btn-danger">Delete</button>
         }
     </div>
 </div>
