--- a/money.web/Views/Entries/Update.cshtml
+++ b/money.web/Views/Entries/Update.cshtml
@@ -9,14 +9,44 @@
         <h1>Update Entry</h1>
         @using (Html.BeginForm())
         {
-            @Html.EditorForModel()
-            <input type="submit" value="Update" />
+            <div class="form-group">
+                @Html.LabelFor(x => x.Amount)
+                <div class="row">
+                    <div class="col-xs-5">
+                        @Html.EditorFor(x => x.Amount)
+                    </div>
+                    <div class="col-xs-7">
+
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x => x.Date)
+                <div class="row">
+                    <div class="col-xs-7">
+                        @Html.EditorFor(x => x.Date)
+                    </div>
+                    <div class="col-xs-5">
+                        <button class="btn btn-default btn-block btn-date-preset" data-date="@DateTime.Now.Date.AddDays(-1).ToString("yyyy-MM-dd")">Yesterday</button>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x => x.CategoryID)
+                @Html.DropDownListFor(x => x.CategoryID, Model.Categories, "--", new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x => x.PartyID)
+                @Html.DropDownListFor(x => x.PartyID, Model.Parties, "--", new { @class = "form-control" })
+            </div>
+
+            <button type="submit" class="btn btn-primary">Update</button>
         }
 
         @using (Html.BeginForm("Delete", "Entries"))
         {
             @Html.HiddenFor(x => x.ID)
-            <input type="submit" value="Delete" />
+            <button type="submit" class="btn btn-danger">Delete</button>
         }
     </div>
 </div>
