Use new editor template for amount

--- a/money.web/Views/Entries/Create.cshtml
+++ b/money.web/Views/Entries/Create.cshtml
@@ -16,10 +16,7 @@
             @Html.LabelFor(x => x.Amount)
             <div class="row">
                 <div class="col-xs-5">
-                    <div class="input-group">
-                        <div class="input-group-addon">&pound;</div>
-                        @Html.TextBoxFor(x => x.Amount, new { @class = "form-control", type = "number", step = "0.01", autocomplete = "off" })
-                    </div>
+                    @Html.EditorFor(x => x.Amount)
                 </div>
                 <div class="col-xs-7">
                     <button class="btn btn-default btn-block btn-amount-preset" data-amount="@Model.Remaining.ToString("0.00")" @(Model.Remaining == 0 ? "disabled" : "")>All Remaining</button>
