--- a/money.web/Views/MonthlyBudgets/Update.cshtml
+++ b/money.web/Views/MonthlyBudgets/Update.cshtml
@@ -19,7 +19,9 @@
                 @Html.EditorFor(x => x.EndDate)
             </div>
 
-            @Html.EditorFor(x => x.Categories)
+            <div class="form-horizontal">
+                @Html.EditorFor(x => x.Categories)
+            </div>
 
             <button type="submit" class="btn btn-primary">Update</button>
         }
