--- a/money.web/Views/Categories/Index.cshtml
+++ b/money.web/Views/Categories/Index.cshtml
@@ -7,10 +7,30 @@
 <div class="row">
     <div class="col-md-12">
         <h1>Categories</h1>
-        @foreach(var category in Model.Categories)
-        {
-            <p>@category.Name @Html.ActionLink("Edit", "Update", new { id = category.ID })</p>
-        }
+        <table class="table table-condensed table-striped">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th class="text-center">Edit</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var accountGroup in Model.Categories)
+                {
+                    <tr>
+                        <th colspan="2">@accountGroup.Key</th>
+                    </tr>
+
+                    foreach (var category in accountGroup)
+                    {
+                        <tr>
+                            <td>@category.Name</td>
+                            <td class="text-center">@Html.ActionLink("Edit", "Update", new { id = category.ID })</td>
+                        </tr>
+                    }
+                }
+            </tbody>
+        </table>
         @Html.ActionLink("New", "Create")
     </div>
 </div>
