--- a/money.web/Views/Categories/Create.cshtml
+++ b/money.web/Views/Categories/Create.cshtml
@@ -9,8 +9,15 @@
         <h1>Create Category</h1>
         @using (Html.BeginForm())
         {
-            @Html.EditorForModel()
-            <input type="submit" value="Create" />
+            <div class="form-group">
+                @Html.LabelFor(x => x.AccountID)
+                @Html.DropDownListFor(x => x.AccountID, Model.Accounts, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x => x.Name)
+                @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
+            </div>
+            <button type="submit" class="btn btn-primary">Create</button>
         }
     </div>
 </div>
