--- a/money.web/Views/Entries/Create.cshtml
+++ b/money.web/Views/Entries/Create.cshtml
@@ -19,7 +19,17 @@
                     @Html.EditorFor(x => x.Amount)
                 </div>
                 <div class="col-xs-7">
-                    <button class="btn btn-default btn-block btn-amount-preset" data-amount="@Model.Remaining.ToString("0.00")" @(Model.Remaining == 0 ? "disabled" : "")>All Remaining</button>
+                    <div class="btn-group btn-group-justified" role="group">
+                        <div class="btn-group">
+                            <button class="btn btn-default btn-amount-preset" data-amount="-10.00">£10</button>
+                        </div>
+                        <div class="btn-group">
+                            <button class="btn btn-default btn-amount-preset" data-amount="-20.00">£20</button>
+                        </div>
+                        <div class="btn-group">
+                            <button class="btn btn-default btn-amount-preset" data-amount="@Model.Remaining.ToString("0.00")" @(Model.Remaining == 0 ? "disabled" : "")>All</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
