--- a/money.web/Views/Entries/Create.cshtml
+++ b/money.web/Views/Entries/Create.cshtml
@@ -7,28 +7,45 @@
 <div class="row">
     <div class="col-md-12">
         @Html.HiddenFor(x => x.AccountID)
+        @if (Model.Types.Count() == 1)
+        {
+            @Html.HiddenFor(x => x.Type)
+        }
+        else
+        {
+            <div class="form-group">
+                @Html.LabelFor(x => x.Type)
+                @Html.DropDownListFor(x => x.Type, Model.Types, new { @class = "form-control" })
+            </div>
+        }
         <div class="form-group">
-            @Html.LabelFor(x => x.Type)
-            @Html.DropDownListFor(x => x.Type, Model.Types, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(x => x.Amount)
+            @if (Model.IsCredit.HasValue && Model.IsCredit.Value)
+            {
+                <label for="Amount" class="control-label">Credit Amount</label>
+            }
+            else
+            {
+                <label for="Amount" class="control-label">Amount</label>
+            }
             <div class="row">
                 <div class="col-xs-5">
                     @Html.EditorFor(x => x.Amount)
                 </div>
                 <div class="col-xs-7">
-                    <div class="btn-group btn-group-justified" role="group">
-                        <div class="btn-group">
-                            <button class="btn btn-default btn-amount-preset" data-amount="-10.00">£10</button>
+                    @if (!Model.IsCredit.HasValue || !Model.IsCredit.Value)
+                    {
+                        <div class="btn-group btn-group-justified" role="group">
+                            <div class="btn-group">
+                                <button class="btn btn-default btn-amount-preset" data-amount="-10.00">£10</button>
+                            </div>
+                            <div class="btn-group">
+                                <button class="btn btn-default btn-amount-preset" data-amount="-20.00">£20</button>
+                            </div>
+                            <div class="btn-group">
+                                <button class="btn btn-default btn-amount-preset" data-amount="@Model.Remaining.ToString("0.00")" @(Model.Remaining == 0 ? "disabled" : "")>All</button>
+                            </div>
                         </div>
-                        <div class="btn-group">
-                            <button class="btn btn-default btn-amount-preset" data-amount="-20.00">£20</button>
-                        </div>
-                        <div class="btn-group">
-                            <button class="btn btn-default btn-amount-preset" data-amount="@Model.Remaining.ToString("0.00")" @(Model.Remaining == 0 ? "disabled" : "")>All</button>
-                        </div>
-                    </div>
+                    }
                 </div>
             </div>
         </div>
