--- a/money.web/Views/Shared/_Account.cshtml
+++ b/money.web/Views/Shared/_Account.cshtml
@@ -14,10 +14,7 @@
         <span class="btn-height account-balance">@Model.CurrentBalance.ToString("0.00")</span>
     </div>
     <div class="col-xs-2 text-right">
-        @if (!hasBudget)
-        {
-        <button data-accountid="@Model.ID" data-accountname="@Model.Name" class="btn btn-primary btn-add-entry"><i class="fa fa-plus"></i></button>
-        }
+        <button data-accountid="@Model.ID" data-accountname="@Model.Name" @Html.Raw(hasBudget ? "data-iscredit=\"true\"" : "") class="btn btn-primary btn-add-entry"><i class="fa fa-plus"></i></button>
     </div>
 </div>
 
@@ -37,7 +34,7 @@
                 </div>
             </div>
             <div class="col-xs-2 text-right">
-                <button data-accountid="@Model.ID" data-accountname="@Model.Name" data-categoryid="@category.ID" data-categoryname="@category.Name" data-remaining="@category.Remaining" class="btn btn-primary btn-add-entry"><i class="fa fa-plus"></i></button>
+                <button data-accountid="@Model.ID" data-accountname="@Model.Name" data-iscredit="false" data-categoryid="@category.ID" data-categoryname="@category.Name" data-remaining="@category.Remaining" class="btn btn-primary btn-add-entry"><i class="fa fa-minus"></i></button>
             </div>
         </div>
     }
