Accounts can now be marked as Dormant: dormant accounts won't show on dashboard

--- a/money.web/Content/site.css
+++ b/money.web/Content/site.css
@@ -107,6 +107,10 @@ body {
     font-weight: bold;
 }
 
+.dormant {
+    background-color: #f3f9ff !important;
+}
+
 #net-worth {
     margin-top: 15px;
 }
