--- a/money.web/Content/site.scss
+++ b/money.web/Content/site.scss
@@ -105,6 +105,10 @@
     font-weight: bold;
 }
 
+.dormant {
+    background-color: #f3f9ff !important;
+}
+
 #net-worth {
     margin-top: 15px;
 }
