--- a/money.web/Content/site.css
+++ b/money.web/Content/site.css
@@ -79,10 +79,10 @@ body {
     -ms-touch-action: manipulation;
     touch-action: manipulation;
     cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
     background-image: none;
     border: 1px solid transparent;
 }
