--- a/money.web/Views/Shared/_Account.cshtml
+++ b/money.web/Views/Shared/_Account.cshtml
@@ -7,6 +7,9 @@
 }
 
 <div class="row row-account">
+    <div class="col-xs-12">
+        <hr />
+    </div>
     <div class="col-xs-6">
         <h1>@Html.ActionLink(Model.Name, "Index", "Entries", new { id = Model.ID }, new { @class = "btn-height" })</h1>
     </div>
