--- a/money.web/Views/Shared/_Layout.cshtml
+++ b/money.web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 <div class="load-indicator"><img src="~/Content/ajax-loader-light.gif" class="load-indicator-hidden" /></div>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-right">
                     <li>@Html.ActionLink("Accounts", "Index", "Accounts")</li>
                     <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
                     <li>@Html.ActionLink("Parties", "Index", "Parties")</li>
