--- a/money.web/Content/site.scss
+++ b/money.web/Content/site.scss
@@ -11,8 +11,12 @@
 
 .row-account {
     margin-top: 10px;
-    padding-top: 10px;
-    border-top: solid 1px #e0e0e0;
+    padding-top: 0;
+    
+    hr {
+        margin-top: 0;
+        margin-bottom: 10px;
+    }
 
     h1 {
         margin: 0;
@@ -27,6 +31,10 @@
     [class^="col-"]:first-child {
         padding-right: 0;
     }
+}
+
+.row-budget-lg {
+    font-size: 2em;
 }
 
 .account-balance {
@@ -111,6 +119,10 @@
 
 #net-worth {
     margin-top: 15px;
+
+    hr {
+        margin-top: 0;
+    }
 }
 
 .net-worth-header {
