TypeScript now follows tslint recommendations, minor housekeeping

--- a/money.web/Views/Shared/_Layout.cshtml
+++ b/money.web/Views/Shared/_Layout.cshtml
@@ -45,8 +45,8 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/site")
     <script>
-        const _ADD_ENTRY_URL = '@Url.Action("Create", "Entries")';
-        const _NET_WORTH_URL = '@Url.Action("NetWorth", "Home")';
+        const ADD_ENTRY_URL = '@Url.Action("Create", "Entries")';
+        const NET_WORTH_URL = '@Url.Action("NetWorth", "Home")';
     </script>
     @RenderSection("scripts", required: false)
 </body>
