--- a/money.web/Content/site.css
+++ b/money.web/Content/site.css
@@ -147,6 +147,13 @@ body {
     font-weight: bold;
 }
 
+.net-worth-total-balance {
+    font-weight: normal;
+    opacity: 0.6;
+    padding-left: 20px;
+    float: right;
+}
+
 .net-worth-balance-list {
     margin-top: 12px;
 }
