--- a/money.web/Content/site.scss
+++ b/money.web/Content/site.scss
@@ -145,6 +145,13 @@
     font-weight: bold;
 }
 
+.net-worth-total-balance {
+    font-weight: normal;
+    opacity: 0.6;
+    padding-left: 20px;
+    float: right;
+}
+
 .net-worth-balance-list {
     margin-top: 12px;
 }
