--- a/money.web/Views/Accounts/Create.cshtml
+++ b/money.web/Views/Accounts/Create.cshtml
@@ -21,6 +21,10 @@
                 @Html.LabelFor(x => x.StartingBalance)
                 @Html.TextBoxFor(x => x.StartingBalance, new { @class = "form-control" })
             </div>
+            <div class="form-group">
+                @Html.LabelFor(x => x.DisplayOrder)
+                @Html.TextBoxFor(x => x.DisplayOrder, new { @class = "form-control" })
+            </div>
             <div class="checkbox">
                 <label>
                     @Html.CheckBoxFor(x => x.IncludeInNetWorth) Include balance in net worth
