Basic domain and infrastructure is now ported

--- a/money/Views/Home/Index.cshtml
+++ b/money/Views/Home/Index.cshtml
@@ -1,7 +1,15 @@
-﻿@{
+﻿@model IndexViewModel
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <p>Index View</p>
 
 <p class="test"></p>
+
+<p>@Model.RequestContext.RequestUrl</p>
+
+<p>@Model.UnitOfWork.ConnectionString</p>
+
+<p>@Model.TestData</p>
